--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>koding blok</title>
+    <style>
+        .class-1 {
+            color: red;
+        }
+        .class-2 {
+            color: yellow;
+        }
+        .class-4 {
+            color: green;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="class-1">
+        <div class="class-2">contoh class 2</div>
+        <div class="class-3">contoh class 3
+            <div class="class-4">contoh class 4</div>
+        </div>
+    </div>
 </body>
 </html>
